<resources>
    <string name="app_name">VocabHelper</string>
    <string name="define_lang">Define Language:</string>
    <string name="define_learn">Define Language to Learn:</string>
    <string name="enter_button">Enter</string>
    <string name="define_hint">Enter Here.....</string>
    <string name="add_tab">Add</string>
    <string name="vocab_tab">Vocabulary</string>
    <string name="test_tab">Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">main</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="meaning">Meaning</string>
    <string name="lang_text">Defined:</string>
    <string name="learn_text">Learning:</string>
    <string name="hint">Enter Here.....</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
</resources>
